# doom-depths

./: .gitignore  CMakeLists.txt  README.md  conan_provider.cmake  conandata.yml  doomdetphs.save  doomdetphs.save.exemple  main.c
adapter/: CMakeLists.txt
adapter/in/: new_game.h
adapter/in/cli/: CMakeLists.txt  cli_controller.c  cli_controllers.h  cli_fight_controller.c  cli_grimoire_controller.c  cli_inventory_controller.c  cli_map_controller.c  cli_town_controller.c
adapter/in/sdl/: CMakeLists.txt  sdl_controller.h  sld_controller.c
adapter/in/sdl/components/animation/: animation.c  animation.h
adapter/in/sdl/components/aria/: aria.c  aria.h
adapter/in/sdl/components/background/: background.c  background.h
adapter/in/sdl/components/button/: button.c  button.h  button_clicked_event.h
adapter/in/sdl/components/button/button_callback/: button_callback.c  button_callback.h
adapter/in/sdl/components/button/button_events/: button_events.c  button_events.h
adapter/in/sdl/components/button/button_size/: button_size.c  button_size.h
adapter/in/sdl/components/color/: sdl_color.c  sdl_color.h
adapter/in/sdl/components/event/: event.c  event.h
adapter/in/sdl/components/map/: sdl_map.c  sdl_map.h
adapter/in/sdl/components/padding/: padding.c  padding.h
adapter/in/sdl/components/point/: point.h
adapter/in/sdl/components/row/: row.c  row.h
adapter/in/sdl/components/screen_position/: screen_position.c  screen_position.h
adapter/in/sdl/components/sprite_sheet/: sprite_sheet.c  sprite_sheet.h
adapter/in/sdl/pages/: pages.h
adapter/in/sdl/pages/fight/: sdl_fight_page.c  sdl_fight_page.h
adapter/in/sdl/pages/fight/fight_action_buttons/: fight_action_buttons.c  fight_action_buttons.h
adapter/in/sdl/pages/fight/health_bar/: health_bar.c  health_bar.h
adapter/in/sdl/pages/fight/sdl_monsters/: sdl_monster.c  sdl_monster.h
adapter/in/sdl/pages/fight/sdl_player/: sdl_player.c  sdl_player.h
adapter/in/sdl/pages/map/: sdl_map_page.c  sdl_map_page.h
adapter/in/sdl/pages/map/zone/: sdl_zone.c  sdl_zone.h
adapter/in/sdl/pages/town/: sdl_town_controller.c  sdl_town_controller.h
adapter/in/sdl/town/: sdl_town_controller.c  sdl_town_controller.h
application/: CMakeLists.txt
application/port/in/: attack_with_weapon.h  drink_potion.h  end_round.h  equip_item.c  new_game.h  new_run.h  start_fight.h  start_ihm.h
application/port/in/command/: attack_with_weapon.h  cast_spell.h  continue_last_run.h  drink_potion.h  end_round.h  equip_item.h  finish_current_zone.h  leave_town.h  new_run.h  player_enter_zone.h  start_new_round.h
application/port/in/query/: is_current_fight_finished.c  is_current_fight_finished.h  is_current_round_finished.h  is_player_alive.h
application/service/: cast_spell.c  continue_last_run.c  drink_potion.c  end_round.c  equip_item.c  finish_current_zone.c  is_player_alive.c  leave_town.c  new_game.c  new_run.c  player_enter_zone.c  player_use_weapon.c  start_fight.c  start_new_round.c
application/service/command/: cast_spell.c  continue_last_run.c  drink_potion.c  end_round.c  equip_item.c  finish_current_zone.c  leave_town.c  new_run.c  player_enter_zone.c  player_use_weapon.c  start_new_round.c
application/service/event/: player_killed_monster.c
application/service/query/: is_current_fight_finished.c  is_current_round_finished.c  is_player_alive.c
domain/: CMakeLists.txt  repository.h
domain/doom_depths/: doom_depths.c  doom_depths.h
domain/doom_detpths/: doom_depths.c
domain/fight/: fight.c  fight.h
domain/fight/armor/: armor.c  armor.h
domain/fight/event/: player_killed_monster.h
domain/fight/loot/: loot.c  loot.h
domain/fight/player_fight_action/: player_fight_action.c  player_fight_actions.h
domain/fight/weapon/: weapon.c  weapon.h
domain/magic/grimoire/: grimoire.c  grimoire.h
domain/magic/mana_potion/: mana_potion.c  mana_potion.h
domain/magic/spell/: spell.c  spell.h
domain/map/: map.c  map.h
domain/map/position/: position.c  position.h
domain/map/zone/: zone.c  zone.h
domain/monsters/: monsters.c  monsters.h
domain/player/: player.c  player.h
domain/player/equipment/: equipment.c  equipment.h
domain/player/inventory/: inventory.c  inventory.h
domain/player/inventory/player_inventory_action/: player_inventory_actions.c  player_inventory_actions.h
fight/: fight.c  fight.h
fight/armor/: armor.c  armor.h
fight/loot/: loot.c  loot.h
fight/player_fight_action/: player_fight_action.c  player_fight_actions.h
fight/weapon/: weapon.c  weapon.h
ihm/: ihm.h
ihm/cli/: cli_ihm.c  cli_ihm.h
ihm/cli/grimoire_cli/: grimoire_cli.c
ihm/cli/inventory_cli/: inventory_cli.c  inventory_cli.h
ihm/cli/map_cli/: map_cli.c
infrastructure/repository/: custom_file_repository.c  game_state.h
infrastructure/repository/repository_status/: respository_status.c  respository_status.h
infrastructure/utils/: utils.h
infrastructure/utils/log/: cli_log.c  dont_log.c  file_log.c  log.c  log.h
infrastructure/utils/random/: mock_random.c  random.c
infrastructure/utils/time/: time_util.c  time_util.h
monsters/: monster.h  monsters.c  monsters.h
player/: player.c  player.h
player/equipment/: equipment.c  equipment.h
player/inventory/: inventory.c  inventory.h
player/inventory/player_inventory_action/: player_inventory_actions.c  player_inventory_actions.h
player/player_action/: player_action.c  player_actions.h
random/: random.c  random.h
utils/: CMakeLists.txt  utils.c
utils/log/: cli_log.c  dont_log.c  file_log.c  log.c  log.h  log_error.h  log_player.h  log_repository_status.h
utils/random/: mock_random.c  random.c  random.h
utils/time/: time_util.c  time_util.h
